# misaxx-ome

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: misaxx-imaging-ome-config.cmake.in  misaxx-ome-config.cmake.in  module_info.cpp.in  module_info.h.in
include/misaxx-ome/: misa_ome_tiff_description_builder.h  misa_ome_tiff_description_modifier.h  ome_helpers.h
include/misaxx-ome/accessors/: misa_ome_plane.h  misa_ome_tiff.h
include/misaxx-ome/attachments/: misa_ome_location.h  misa_ome_pixel_count.h  misa_ome_planes_location.h  misa_ome_unit.h  misa_ome_voxel.h  misa_ome_voxel_size.h
include/misaxx-ome/caches/: misa_ome_plane_cache.h  misa_ome_tiff_cache.h
include/misaxx-ome/descriptions/: misa_ome_plane_description.h  misa_ome_tiff_description.h
include/misaxx-ome/io/: coixx_to_ome.h  json_ome_quantity.h  ome_tiff_io.h  ome_to_ome.h  ome_to_opencv.h  opencv_to_ome.h
include/misaxx/ome/: misa_ome_tiff_description_builder.h  misa_ome_tiff_description_modifier.h
include/misaxx/ome/accessors/: misa_ome_plane.h  misa_ome_tiff.h
include/misaxx/ome/attachments/: misa_ome_pixel_count.h  misa_ome_planes_location.h  misa_ome_quantity.h  misa_ome_unit.h  misa_ome_voxel.h  misa_ome_voxel_size.h
include/misaxx/ome/caches/: misa_ome_plane_cache.h  misa_ome_tiff_cache.h
include/misaxx/ome/descriptions/: misa_ome_plane_description.h  misa_ome_tiff_description.h
include/misaxx/ome/patterns/: misa_ome_tiff_pattern.h
include/misaxx/ome/utils/: coixx_to_ome.h  json_ome_pixel_type.h  json_ome_quantity.h  ome_helpers.h  ome_tiff_io.h  units_electric_potential.h  units_frequency.h  units_length.h  units_power.h  units_pressure.h  units_temperature.h  units_time.h
misaxx_ome/: misa_ome.cpp
misaxx_ome/accessors/: misa_ome_plane.cpp  misa_ome_plane.h  misa_ome_tiff.cpp  misa_ome_tiff.h
misaxx_ome/attachments/: misa_ome_location.cpp  misa_ome_location.h  misa_ome_pixel_count.cpp  misa_ome_pixel_count.h  misa_ome_pixels.cpp  misa_ome_pixels.h  misa_ome_quantity.cpp  misa_ome_quantity.h  misa_ome_unit.cpp  misa_ome_unit.h  misa_ome_unit_length.cpp  misa_ome_unit_length.h  misa_ome_volume.cpp  misa_ome_volume.h  misa_ome_voxel.cpp  misa_ome_voxel.h  misa_ome_voxel_size.cpp  misa_ome_voxel_size.h
misaxx_ome/caches/: misa_ome_image.h  misa_ome_plane.h  misa_ome_plane_cache.cpp  misa_ome_plane_cache.h  misa_ome_readonly_image.h  misa_ome_readonly_tiff.h  misa_ome_tiff.h  misa_ome_tiff_cache.cpp  misa_ome_tiff_cache.h
misaxx_ome/descriptions/: misa_ome_image_description.h  misa_ome_plane_description.cpp  misa_ome_plane_description.h  misa_ome_plane_location.cpp  misa_ome_plane_location.h  misa_ome_series_description.cpp  misa_ome_series_description.h  misa_ome_tiff_description.cpp  misa_ome_tiff_description.h
misaxx_ome/helpers/: misa_ome_tiff_description_builder.cpp  misa_ome_tiff_description_builder.h  misa_ome_tiff_description_modifier.cpp  misa_ome_tiff_description_modifier.h  ome_helpers.cpp  ome_helpers.h
misaxx_ome/io/: coixx_to_ome.cpp  coixx_to_ome.h  json_ome_pixel_type.cpp  json_ome_pixel_type.h  json_ome_quantity.cpp  ome_read_write_tiff.cpp  ome_read_write_tiff.h  ome_tiff_io.cpp  ome_tiff_io.h  ome_to_ome.cpp  ome_to_ome.h  ome_to_opencv.cpp  ome_to_opencv.h  opencv_to_ome.cpp  opencv_to_ome.h
misaxx_ome/patterns/: misa_ome_image_pattern.h  misa_ome_tiff_pattern.cpp  misa_ome_tiff_pattern.h
src/misaxx-ome/: misa_ome_tiff_description_builder.cpp  misa_ome_tiff_description_modifier.cpp  ome_helpers.cpp
src/misaxx-ome/accessors/: misa_ome_plane.cpp  misa_ome_tiff.cpp
src/misaxx-ome/attachments/: misa_ome_location.cpp  misa_ome_pixel_count.cpp  misa_ome_planes_location.cpp  misa_ome_unit.cpp  misa_ome_voxel.cpp  misa_ome_voxel_size.cpp
src/misaxx-ome/caches/: misa_ome_plane_cache.cpp  misa_ome_tiff_cache.cpp
src/misaxx-ome/descriptions/: misa_ome_plane_description.cpp  misa_ome_tiff_description.cpp
src/misaxx-ome/io/: coixx_to_ome.cpp  json_ome_pixel_type.cpp  json_ome_quantity.cpp  ome_tiff_io.cpp  ome_to_ome.cpp  ome_to_ome.h  ome_to_opencv.cpp  ome_to_opencv.h  opencv_to_ome.cpp  opencv_to_ome.h
src/misaxx-ome/patterns/: misa_ome_tiff_pattern.cpp
src/misaxx/ome/: misa_ome_tiff_description_builder.cpp  misa_ome_tiff_description_modifier.cpp  module_info.cpp
src/misaxx/ome/accessors/: misa_ome_plane.cpp  misa_ome_tiff.cpp
src/misaxx/ome/attachments/: misa_ome_pixel_count.cpp  misa_ome_planes_location.cpp  misa_ome_unit.cpp  misa_ome_voxel.cpp  misa_ome_voxel_size.cpp
src/misaxx/ome/caches/: misa_ome_plane_cache.cpp  misa_ome_tiff_cache.cpp
src/misaxx/ome/descriptions/: misa_ome_plane_description.cpp  misa_ome_tiff_description.cpp
src/misaxx/ome/patterns/: misa_ome_tiff_pattern.cpp
src/misaxx/ome/utils/: coixx_to_ome.cpp  json_ome_pixel_type.cpp  json_ome_quantity.cpp  ome_helpers.cpp  ome_tiff_io.cpp  ome_tiff_io.h  ome_to_ome.cpp  ome_to_ome.h  ome_to_opencv.cpp  ome_to_opencv.h  opencv_to_ome.cpp  opencv_to_ome.h
